--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "grunt-contrib-coffee": "^0.12.0",
     "grunt-contrib-jasmine": "^0.8.1",
     "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-watch": "^0.6.1"
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-exec": "^0.4.6"
   }
 }
